--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-Hello there, awesome person!
+<html>
+  <body>
+Hello there, awesome person! This awesome person is still trying to understand what the hell is actually happening. Guess it was a bad idea
+  </body>
+</html>
