--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+  <head>
+    <title>still no idea what's going on</title>
+  </head>
+  
   <body>
 Hello there, awesome person! This awesome person is still trying to understand what the hell is actually happening. Guess it was a bad idea
   </body>
