--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
     <h1>umm new header?</h1>
 Hello there, awesome person! This awesome person is still trying to understand what the hell is actually happening. Guess it was a bad idea
     <img src=https://toppng.com//public/uploads/preview/confused-kid-png-11552334631qspfnvej0u.png>
+    <ol>
+      <li>Instagram</li>
+      <li>Reddit</li>
+      <li>Github</li>
+    </ol>
   </body>
 </html>
